--- a/ventanas html/index.html
+++ b/ventanas html/index.html
@@ -5,58 +5,21 @@
     <title> Ejercicio</title>
     <link href="/Css/index.css" rel="stylesheet" type="text/css">
     <script type = "text/javascript" src="resources/jquery-3.6.0.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    
+    <script>
+      $(function(){
+        $("#nav-placeholder").load("navbar.html");
+      });
+      </script>
 
 </head>
 <body>
-  <nav class="navbar navbar-light bg-light ">
-    <div class="container-fluid ">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Iniciar sesion</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Crear sesion</a>
-        </li>
-      </ul>
-      <a class="navbar-brand" href="#">
-        <img src="/resources/logo.png" alt="logo" width="40" height="33" class="d-inline-block align-text-top">
-        Emageth
-      </a>
-      <button class="navbar-toggler " type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-        <div class="offcanvas-header">
-          <img src="/resources/logo.png" alt="logo" width="40" height="33" class="d-inline-block align-text-tops">
-          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Emageth</h5>
-          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Buscar">
-          <button class="btn btn-outline-success" type="submit">Buscar</button>
-        </form>
-        <div class="offcanvas-body">
-          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="offcanvasNavbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Categorias
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="offcanvasNavbarDropdown">
-                <li><a class="dropdown-item" href="#">Tecnologias</a></li>
-                <li><a class="dropdown-item" href="#">Arte</a></li>
-                <li><a class="dropdown-item" href="#">Culinaria</a></li>
-                <li><a class="dropdown-item" href="#">Matematica</a></li>
-              </ul>
-            </li>
-          </ul>
-          
-        </div>
-      </div>
-    </div>
-  </nav>
+  <div id="nav-placeholder" class="inplace">
+  </div>
+  
+  
   <div class="background"> 
 
     <div class="row">
