--- a/ventanas html/index.html
+++ b/ventanas html/index.html
@@ -2,7 +2,7 @@
 <html>  
 <head>
     <meta charset = "utf-8">
-    <title> Ejercicio</title>
+    <title> Emageht</title>
     <link href="/Css/index.css" rel="stylesheet" type="text/css">
     <script type = "text/javascript" src="resources/jquery-3.6.0.slim.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
