--- a/ventanas html/navbar.html
+++ b/ventanas html/navbar.html
@@ -15,14 +15,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item ">
-                        <a class="nav-link active" aria-current="page" href="#">Iniciar sesion</a>
+                        <a class="nav-link active" aria-current="page" href="IniciarSesion.html">Iniciar sesion</a>
                     </li>
                     <li class="nav-item ">
                         <a class="nav-link active" href="#">Crear cuenta</a>
                     </li>
                 </ul>
             </div>
-            <a class="navbar-brand"  href="#">
+            <a class="navbar-brand"  href="index.html">
                 <img src="/resources/logo.png" alt="" width="40" height="32" class="d-inline-block align-text-top">
                 Emageht
             </a>
