--- a/ventanas html/IniciarSesion.html
+++ b/ventanas html/IniciarSesion.html
@@ -2,14 +2,20 @@
 <html>  
 <head>
     <meta charset = "utf-8">
-    <title> Ejercicio</title>
+    <title>Iniciar Sesion</title>
     <link href="/Css/iniciosesion.css" rel="stylesheet" type="text/css">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <script>
+
         $(function(){
           $("#nav-placeholder").load("navbar.html");
+        });
+        $(document).ready( function (){
+            $("#verificarCuenta").click(function(){
+                alert("Hola usuario");
+            });
         });
     </script>
 
@@ -31,7 +37,7 @@
                 <br>
                 <br>
                 <br>
-                <input class="iniciar" type="submit" value="Crear">
+                <button class="iniciar" id="verificarCuenta">Iniciar</button>
               </form>
         </div>
     </div>
