--- a/ventanas html/navbar.html
+++ b/ventanas html/navbar.html
@@ -18,7 +18,7 @@
                         <a class="nav-link active" aria-current="page" href="IniciarSesion.html">Iniciar sesion</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link active" href="#">Crear cuenta</a>
+                        <a class="nav-link active" href="Crearcuenta.html">Crear cuenta</a>
                     </li>
                 </ul>
             </div>
