--- a/ventanas html/index.html
+++ b/ventanas html/index.html
@@ -17,9 +17,9 @@
       $(document).ready( function (){
             
         $("#curso1").click(function (){
-          window.location.replace("http://www.w3schools.com");
+          window.location.href = 'CursoDetalle.html';
         });
-            
+
       });
     </script>
 
@@ -73,7 +73,7 @@
     <div class="row">
 
       <div class="col" >
-        <div class="card mb-3 border-card-left " >
+        <div class="card mb-3 border-card-left yeah" id="curso1" >
           <div class="row g-0 ">
             <div class="col-md-4">
               <img src="/resources/unknown (1).png" class="img-fluid rounded-start" alt="...">
