--- a/ventanas html/index.html
+++ b/ventanas html/index.html
@@ -73,7 +73,7 @@
     <div class="row">
 
       <div class="col" >
-        <div class="card mb-3 border-card-left yeah" id="curso1" >
+        <div class="card mb-3 border-card-left " id="curso1" >
           <div class="row g-0 ">
             <div class="col-md-4">
               <img src="/resources/unknown (1).png" class="img-fluid rounded-start" alt="...">
