--- a/ventanas html/IniciarSesion.html
+++ b/ventanas html/IniciarSesion.html
@@ -12,6 +12,10 @@
         $(function(){
           $("#nav-placeholder").load("navbar.html");
         });
+        $(function(){
+          
+          $("#foot").load("footer.html");
+        });
         $(document).ready( function (){
             $("#verificarCuenta").click(function(){
                 alert("Hola usuario");
@@ -40,6 +44,9 @@
                 <button class="iniciar" id="verificarCuenta">Iniciar</button>
               </form>
         </div>
+    </div>
+
+    <div id="foot" class="inplace" >
     </div>
 </body>
 </html>
