--- a/ventanas html/Crearcuenta.html
+++ b/ventanas html/Crearcuenta.html
@@ -13,6 +13,9 @@
         $(function(){
           $("#nav-placeholder").load("navbar.html");
         });
+        $(function(){
+          $("#foot").load("footer.html");
+        });
         $(document).ready( function (){
 
             $("#verificarCuenta").click(function(){
@@ -149,6 +152,7 @@
                 </form>
         </div>
     </div>
+    <div class="inplace" id="foot"></div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
