--- a/ventanas html/CursoDetalle.html
+++ b/ventanas html/CursoDetalle.html
@@ -59,6 +59,10 @@
     </div>
     <div id="main">
       <div class="background">
+        <div class="title">
+          Nivel 1: Lo basico
+        </div>
+        <br>
         <video autoplay controls width="90%" height="70%"  class="video" muted>
             <source src="/resources/pruebavid1.mp4" type="video/mp4" >
             Your browser does not support the video tag u.u.
@@ -79,7 +83,7 @@
               </div>
               <aside>
                 <small class="" style="text-align: center; ">Adrian Garza</small><label class="iconos">iconos</label><br>
-                <label>comentario pitero</label>
+                <label>comentario 1</label>
               </aside>
             </div>
           </div>
