--- a/ventanas html/IniciarSesion.html
+++ b/ventanas html/IniciarSesion.html
@@ -41,8 +41,8 @@
                 <br>
                 <br>
                 <br>
-                <button class="iniciar" id="verificarCuenta">Iniciar</button>
               </form>
+              <a href="index.html"><button class="iniciar" id="verificarCuenta" >Iniciar</button></a> 
         </div>
     </div>
 
