--- a/ventanas html/footer.html
+++ b/ventanas html/footer.html
@@ -10,12 +10,43 @@
 
 </head>
 <body>
-    <footer>
+    
+    <footer >
         <div class="row">
             <div class="col-sm-8 categorias">
                 <h5>Categorias</h5>
                 <div class="lista">
                     <ul>
+                        <li>
+                            Teconologias
+                        </li>
+                        <li>
+                            Arte
+                        </li>
+                        <li>
+                            Teconologias
+                        </li>
+                        <li>
+                            Arte
+                        </li>
+                        <li>
+                            Teconologias
+                        </li>
+                        <li>
+                            Arte
+                        </li>
+                        <li>
+                            Teconologias
+                        </li>
+                        <li>
+                            Arte
+                        </li>
+                        <li>
+                            Teconologias
+                        </li>
+                        <li>
+                            Arte
+                        </li>
                         <li>
                             Teconologias
                         </li>
